# vrun

./: .coveragerc  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini  vrun.cfg
src/vrun/: cli.py  compat.py  config.py  oscompat.py
tests/: test_cli.py  test_compat.py  test_config.py  test_oscompat.py  test_oscompat_win.py
tests/configtest/: setup.cfg  vrun.cfg  vrun.ini
tests/configtest/bad/: vrun.cfg
tests/configtest/vrun_ini/: vrun.ini
