[wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
exclude =
show-source = True
max-line-length = 89

[check-manifest]
ignore =
    .gitignore
    PKG-INFO
    *.egg-info
    *.egg-info/*
    *.swp
ignore-default-rules = true

[tool:pytest]
python_files = test_*.py
testpaths =
    src/vrun
    tests
